fixed hover problem on ios devices

--- a/graph.css
+++ b/graph.css
@@ -136,10 +136,12 @@ body {
     transition: background-color 0.3s, color 0.3s;
 }
 
-.button:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-
+@media (min-width: 1025px) {
+    .button:hover {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
 }
+
 
 .button:active {
     background-color: rgba(0, 0, 0, 0.15);
@@ -180,8 +182,10 @@ body {
     fill-opacity: 0.2;
 }
 
-.github-link:hover .bg {
-    fill-opacity: 0.3;
+@media (min-width: 1025px) {
+    .github-link:hover .bg {
+        fill-opacity: 0.3;
+    }
 }
 
 .github-link .icon {
@@ -189,8 +193,10 @@ body {
     fill-opacity: 0.6;
 }
 
-.github-link:hover .icon {
-    fill-opacity: 0.7;
+@media (min-width: 1025px) {
+    .github-link:hover .icon {
+        fill-opacity: 0.7;
+    }
 }
 
 header {
@@ -394,7 +400,6 @@ header h1 .optional {
     background: white;
 }
 
-.more button:hover,
 .more button:active,
 .more button:focus,
 .more button:focus:not(:active) {
